# AIREloom

./: .gitignore  .roborev.toml  404.html  AGENTS.md  AIRELOOM_IMPROVEMENT_PLAN.md  DEMO_SUMMARY.md  ERGONOMICS_PLAN.md  OPENAIRE_BUG_REPORT.md  README.md  aireloom_comprehensive_analysis.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  secrets.env  sitemap.xml  test.py  testbook.py  verification_script.py
.github/: copilot-instructions.md
.github/workflows/: python-ci.yml
.roo/: mcp.json
_old_aireloom/: __init__.py  endpoints.py  entities.py  httpx_client.py  validators.py
advanced/caching/: index.html
advanced/configuration/: index.html
advanced/error_handling/: index.html
advanced/hooks/: index.html
advanced/rate_limiting/: index.html
aireloom/: __init__.py  aireloom.py  auth.py  base_classes.py  client.py  config.py  constants.py  endpoints.py  entities.py  exceptions.py  log_config.py  merged_python_code.py  session.py  types.py  util.py  utils.py  validators.py
aireloom/models/: __init__.py  base.py  data_source.py  organization.py  project.py  research_product.py  scholix.py
aireloom/resources/: base_client.py  data_sources_client.py  organizations_client.py  projects_client.py  research_products_client.py  scholix_client.py
api_reference/: index.html
authentication/: index.html
changelog/: index.html
client/: index.html
config/: index.html
configuration/: index.html
contributing/: index.html
docs/: api_reference.md  authentication.md  changelog.md  client.md  config.md  configuration.md  ergonomics.md  filter_options.md  getting_started.md  index.md  installation.md  models.md  session.md  usage_basics.md
docs/advanced/: caching.md  configuration.md  error_handling.md  hooks.md  rate_limiting.md
docs/endpoints/: data_sources.md  links.md  organizations.md  persons.md  projects.md  research_products.md  scholix.md
docs/resources/: data_sources.md  organizations.md  projects.md  research_products.md  scholix.md
docs/usage/: data_sources.md  links.md  organizations.md  persons.md  projects.md  research_products.md  scholix.md
endpoints/data_sources/: index.html
endpoints/links/: index.html
endpoints/organizations/: index.html
endpoints/persons/: index.html
endpoints/projects/: index.html
endpoints/research_products/: index.html
endpoints/scholix/: index.html
ergonomics/: index.html
examples/: 02_scholix_link_discovery.py  03_research_product_analysis.py  04_organization_projects.py  05_advanced_filtering.py  06_persons_discovery.py  07_ergonomics_showcase.py  08_iterator_helpers.py  09_computed_fields_and_safe_types.py  10_convenience_queries.py  README.md  comprehensive_analysis.py  simple_example.py
filter_options/: index.html
getting_started/: index.html
installation/: index.html
models/: index.html
reference/: merged_docs.md  openaire_endpoints.md  openaire_entities.md  pyalex_reference.md  read_this.txt
reference/official_docs/: auth.md  filtering.md  requests.md  scholexplorer_api.md  search_api.md  searching.md  single_entity.md  sorting_and_paging.md
reference/official_docs/data_model/: relationship.md
reference/official_docs/data_model/entities/: community.md  data_source.md  organization.md  other_entities.md  project.md
reference/openaire/: __init__.py  enrich.py  mappings.py  queries.py
reference/openaire/models/: community.py  data_source.py  organization.py  project.py  relationship.py  research_product.py  scholix.py
search/: search_index.json
session/: index.html
src/aireloom/: __init__.py  _helpers.py  client.py  constants.py  endpoints.py  queries.py  session.py  unwrapper.py
src/aireloom/models/: __init__.py  base.py  data_source.py  organization.py  person.py  project.py  relation.py  research_product.py  safe_types.py  scholix.py
src/aireloom/resources/: __init__.py  _batch.py  _standard.py  data_sources_client.py  organizations_client.py  persons_client.py  projects_client.py  research_products_client.py  scholix_client.py
tests/: test_actual_data.py  test_auth.py  test_client.py  test_config.py  test_helpers.py  test_models.py  test_queries.py  test_session.py  test_str_repr.py  test_suite.py  test_unwrapper.py
tests/resources/: test_batch_get.py  test_data_sources_client.py  test_links.py  test_organizations_client.py  test_persons_client.py  test_projects_client.py  test_research_products_client.py  test_scholix_client.py
usage/data_sources/: index.html
usage/links/: index.html
usage/organizations/: index.html
usage/persons/: index.html
usage/projects/: index.html
usage/research_products/: index.html
usage/scholix/: index.html
usage_basics/: index.html
